Added the structure for displaying chat rooms. The getChatRooms function will be implemented later

--- a/views/Home.html
+++ b/views/Home.html
@@ -1,3 +1,12 @@
 <div>
-	{{userName}}
+	<h1>Hello {{userName}}</h1>
+	<div id="ListOfChatRooms">
+		<table>
+			<tr ng-repeat="item in getChatRooms()">
+				<!-- To be replaced with actual data from the server-->
+				<td>{{item.ID}}</td>
+				<td>{{item.Name}}</td>
+			</tr>
+		</table>
+	</div>
 </div>
