Added a reference to socket.io

--- a/views/Home.html
+++ b/views/Home.html
@@ -1,12 +1,12 @@
 <div>
 	<h1>Hello {{userName}}</h1>
 	<div id="ListOfChatRooms">
-		<table>
+		<!--<table>
 			<tr ng-repeat="item in getChatRooms()">
-				<!-- To be replaced with actual data from the server-->
+				<!-- To be replaced with actual data from the server>
 				<td>{{item.ID}}</td>
 				<td>{{item.Name}}</td>
 			</tr>
-		</table>
+		</table>-->
 	</div>
 </div>
