Added some error messages to user name selection, but it always shows up one click too late

--- a/views/Home.html
+++ b/views/Home.html
@@ -2,6 +2,7 @@
 	<h1>Select your user name</h1>
 	<input ng-model="userName" placeholder="Select user name"></input>
 	<button ng-click="connect()">Connect</button>
+	<p ng-bind="errorMessage"></p>
 	
 	<div id="ListOfChatRooms">
 		<!--<table>
