--- a/views/Home.html
+++ b/views/Home.html
@@ -1,8 +1,8 @@
 <div>
-	<h1>Welcome {{userName}}</h1>
+	<h1>{{chatRooms.lobby.topic}}</h1>
 	<div id="ListOfChatRooms">
 		<table>
-			<tr ng-repeat="item in chatRooms">
+			<tr ng-repeat="item in chatRooms" ng-hide="$first">
 				<!-- To be replaced with actual data from the server>-->
 				<td>{{item.topic}}</td>
 				<!--<td>{{item.Name}}</td>-->
