Added bootstrap support and message send button

--- a/views/Home.html
+++ b/views/Home.html
@@ -7,6 +7,8 @@
 				<!-- To be replaced with actual data from the server>-->
 				<td>{{item.topic}}</td>
 				<!--<td>{{item.Name}}</td>-->
+				<input />
+				<button>Send</button>
 			</tr>
 		</table>
 	</div>
