Added structure for creating a new chatroom

--- a/views/Home.html
+++ b/views/Home.html
@@ -3,7 +3,7 @@
 	<h1>{{chatRooms.lobby.topic}}</h1>
 	
 	<div id="CreateNewChatRoom">
-		<button>Create a new chatroom</button>
+		<button ng-click="createNewChatRoom()">Create a new chatroom</button>
 	</div>
 	
 	<div id="ListOfChatRooms">
