Made it possible to send a message to a chatroom. But it's buggy

--- a/views/ChatRoom.html
+++ b/views/ChatRoom.html
@@ -11,8 +11,8 @@
 				</span>
 			</li>
 		</ul>
-		<input />
-		<button>Send</button>
+		<input ng-model="theMessage">
+		<button ng-click="sendMessage()">Send</button>
 	</div>
 	<div id="ListOfUsers">
 		<ul>
