Made the currentRoom variable into a scope variable and removed it from Globals

--- a/views/Home.html
+++ b/views/Home.html
@@ -10,7 +10,7 @@
 	
 	<div id="ListOfChatRooms">
 		<table>
-			<ul ng-repeat="item in chatRooms" ng-hide="$first">
+			<ul ng-repeat="item in chatRooms">
 				<li ng-click="joinRoom($index)"><p>{{$index}}</p> {{item.topic}}</li>
 			</ul>
 		</table>
