Made a few tweaks to the display of list items

--- a/views/ChatRoom.html
+++ b/views/ChatRoom.html
@@ -7,7 +7,7 @@
 				<span>
 					<strong>{{item.timestamp | date:"HH:mm:ss"}}</strong>
 					<strong>{{item.nick}}</strong>
-					<p>{{item.message}}</p>
+					{{item.message}}
 				</span>
 			</li>
 		</ul>
