Implemented the kick and ban functionalities

--- a/views/ChatRoom.html
+++ b/views/ChatRoom.html
@@ -27,7 +27,7 @@
 	<div id="ListOfUsers">
 		<ul>
 			<lh>Users<lh>
-			<li ng-repeat="item in userList"></li>
+			<li ng-repeat="item in userList">{{item}}</li>
 		</ul>
 	</div>
 </div>
