--- a/views/Login.html
+++ b/views/Login.html
@@ -1,6 +1,6 @@
 <div>
 	<h1>Select your user name</h1>
 	<input ng-model="userName" placeholder="Select user name" ng-keypress="keyPress($event)" autofocus></input>
-	<button ng-click="connect()">Connect</button>
-	<p>{{errorMessage}}</p>
+	<button ng-click="connect()" data-dismiss="alert" >Connect</button>
+	<p class="alert alert-danger alert-dismissable" >{{errorMessage}}</p>
 </div>
