Made it so users can see users connected to chatroom, but unfortunately only when someone else joins the room

--- a/views/ChatRoom.html
+++ b/views/ChatRoom.html
@@ -24,7 +24,7 @@
 				<div id="ListOfUsers">
 					<h4>Userlist:</h4>
 					<ul>
-						<li ng-repeat="item in userList"></li>
+						<li ng-repeat="item in userList">{{item}}</li>
 					</ul>
 				</div>
 			</div>
